--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -16,17 +16,22 @@
   },
   "devDependencies": {
     "@babel/core": "7.19.1",
+    "@babel/preset-env": "7.19.1",
+    "@babel/preset-typescript": "7.18.6",
     "@rollup/plugin-commonjs": "22.0.2",
     "@rollup/plugin-node-resolve": "14.1.0",
     "@storybook/addon-actions": "6.5.12",
     "@storybook/addon-essentials": "6.5.12",
     "@storybook/addon-links": "6.5.12",
     "@storybook/react": "6.5.12",
+    "@testing-library/jest-dom": "5.16.5",
     "@types/jest": "29.0.3",
     "@typescript-eslint/eslint-plugin": "5.38.0",
     "babel-loader": "8.2.5",
+    "babel-jest": "29.0.3",
     "css-loader": "5.2.6",
     "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
     "eslint": "8.23.1",
     "eslint-plugin-notice": "0.9.10",
     "jest": "29.0.3",
@@ -43,6 +48,7 @@
     "sass": "1.54.9",
     "sass-loader": "10.1.1",
     "style-loader": "2.0.0",
+    "ts-jest": "29.0.1",
     "typescript": "4.8.3"
   },
   "peerDependencies": {
