--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-typescript": "7.18.6",
     "@types/aws-lambda": "8.10.108",
     "@types/chai": "4.3.3",
+    "@types/cors": "2.8.12",
     "@types/mocha": "10.0.0",
     "@types/node": "18.7.18",
     "@types/sinon": "10.0.13",
@@ -35,6 +36,7 @@
     "body-parser": "1.20.1",
     "cache-loader": "4.1.0",
     "chai": "4.3.6",
+    "cors": "2.8.5",
     "eslint": "8.27.0",
     "eslint-plugin-notice": "0.9.10",
     "express": "4.18.2",
@@ -57,9 +59,9 @@
     "clean": "rm -rf ./lib/*",
     "dist": "tsc -d true -p . && node scripts/dist.js",
     "webpack": "webpack",
-    "update:prod": "rimraf ./lib && yarn build && serverless deploy -f app --stage production",
-    "deploy:staging": "rimraf ./lib && yarn build && serverless deploy --stage staging",
-    "deploy:prod": "rimraf ./lib && yarn build && serverless deploy --stage production",
+    "update:prod": "rimraf ./lib && yarn webpack && serverless deploy -f app --stage production",
+    "deploy:staging": "rimraf ./lib && yarn webpack && serverless deploy --stage staging",
+    "deploy:prod": "rimraf ./lib && yarn webpack && serverless deploy --stage production",
     "start": "STENTOR_LOG_LEVEL=debug nodemon src/express.ts",
     "lint": "eslint 'src/**/*.{ts,tsx}'",
     "test": "exit 0"
